--- a/mysql.yaml
+++ b/mysql.yaml
@@ -5,7 +5,7 @@
     - PASSWORD: ExpenseApp@1
   tasks:
     - name: installing 
-      ansible.builitin.dnf:
+      ansible.builtin.dnf:
         name: mysql
         state: present
 
