--- a/mysql.yaml
+++ b/mysql.yaml
@@ -1,39 +1,39 @@
-# - name: installing mysql server
-#   hosts: mysql
-#   become: yes
-#   vars: 
-#     - PASSWORD: ExpenseApp@1
-#   tasks:
-#     - name: installing 
-#       ansible.builtin.dnf:
-#         name: mysql
-#         state: present
-
-#     - name: start and enable the mysql
-#       ansible.builtin.service:
-#         name: mysqld
-#         state: started
-#         enabled: yes
-
-#     - name: Assaign root password for mysql
-#       ansible.builtin.command: mysql_secure_installation --set-root-pass {{PASSWORD}}
-
-
-
-- name: installing mysql 
+- name: installing mysql server
   hosts: mysql
   become: yes
+  vars: 
+    - PASSWORD: ExpenseApp@1
   tasks:
-    - name: Install MySQL Server
-      ansible.builtin.command: dnf install mysql-server -y
+    - name: installing 
+      ansible.builtin.dnf:
+        name: mysql
+        state: present
 
-    - name: enableing mysql
+    - name: start and enable the mysql
       ansible.builtin.service:
-        name: mysqld 
-        enabled: yes
+        name: mysqld
         state: started
-    - name: seting root password 
-      ansible.builtin.command: mysql_secure_installation --set-root-pass ExpenseApp@1
+        enabled: yes
+
+    - name: Assaign root password for mysql
+      ansible.builtin.command: mysql_secure_installation --set-root-pass {{PASSWORD}}
+
+
+
+# - name: installing mysql 
+#   hosts: mysql
+#   become: yes
+#   tasks:
+#     - name: Install MySQL Server
+#       ansible.builtin.command: dnf install mysql-server -y
+
+#     - name: enableing mysql
+#       ansible.builtin.service:
+#         name: mysqld 
+#         enabled: yes
+#         state: started
+#     - name: seting root password 
+#       ansible.builtin.command: mysql_secure_installation --set-root-pass ExpenseApp@1
 
       
 
