--- a/backend.service
+++ b/backend.service
@@ -3,7 +3,7 @@ Description = Backend Service
 
 [Service]
 User=expense
-Environment=DB_HOST="<MYSQL-SERVER-IPADDRESS>"
+Environment=DB_HOST="mysql.aidevops.website"
 ExecStart=/bin/node /app/index.js
 SyslogIdentifier=backend
 
