--- a/backend.yaml
+++ b/backend.yaml
@@ -51,8 +51,8 @@
         name: dnf install mysql -y
         state: present
 
-    - name: load schema
-      ansible.buitlin.command: mysql -h <MYSQL-SERVER-IPADDRESS> -uroot -pExpenseApp@1 < /app/schema/backend.sql
+    # - name: load schema
+    #   ansible.buitlin.command: mysql -h <MYSQL-SERVER-IPADDRESS> -uroot -pExpenseApp@1 < /app/schema/backend.sql
 
     - name: start and enable catalogue 
       ansible.builtin.service:
