--- a/backend.yaml
+++ b/backend.yaml
@@ -36,6 +36,8 @@
 
     - name: install dependencies
       ansible.builtin.command: npm install
+      args:
+        chdir: /app
 
     - name: copy backend service
       ansible.builtin.copy:
