--- a/mysql.yaml
+++ b/mysql.yaml
@@ -1,8 +1,6 @@
 - name: installing mysql server
   hosts: mysql
   become: yes
-  vars: 
-    - PASSWORD: ExpenseApp@1
   tasks:
     - name: installing 
       ansible.builtin.dnf:
@@ -16,7 +14,7 @@
         enabled: yes
 
     - name: Assaign root password for mysql
-      ansible.builtin.command: mysql_secure_installation --set-root-pass {{PASSWORD}}
+      ansible.builtin.command: mysql_secure_installation --set-root-pass ExpenseApp@1
 
 
 
