--- a/mysql.yaml
+++ b/mysql.yaml
@@ -14,7 +14,7 @@
         enabled: yes
 
     - name: Assaign root password for mysql
-      ansible.builtin.command: mysql_secure_installation --set-root-pass ExpenseApp@1
+      ansible.builtin.command: mysql_secure_installation --set-root-pass ExpenseApp1
 
 
 
