--- a/mysql.yaml
+++ b/mysql.yaml
@@ -14,11 +14,11 @@
         enabled: yes
 
     - name: Assaign root password for mysql
-      ansible.builtin.command: mysql_secure_installation --set-root-pass ExpenseApp1
+      ansible.builtin.command: mysql_secure_installation --set-root-pass ExpenseApp@1
+  
 
 
-
-
+ 
 
       
 
