expenses-ansible-practice

--- a/frontend.yaml
+++ b/frontend.yaml
@@ -30,7 +30,7 @@
 
   - name: restart the nginx 
     ansible.builtin.service:
-       name: httpd
+       name: nginx
        state: started 
        enabled: yes
 
