--- a/mysql.yaml
+++ b/mysql.yaml
@@ -13,8 +13,8 @@
         state: started
         enabled: yes
 
-    - name: Assaign root password for mysql
-      ansible.builtin.command: mysql_secure_installation --set-root-pass ExpenseApp@1
+    # - name: Assaign root password for mysql
+    #   ansible.builtin.command: mysql_secure_installation --set-root-pass ExpenseApp@1
   
 
 
