--- a/backend.yaml
+++ b/backend.yaml
@@ -48,10 +48,10 @@
       ansible.builtin.systemd:
          daemon_reload: true
 
-    - name: install mysql 
-      ansible.builtin.dnf:
-        name: mysql
-        state: present
+    # - name: install mysql 
+    #   ansible.builtin.dnf:
+    #     name: mysql
+    #     state: present
 
     # - name: load schema
     #   ansible.buitlin.command: mysql -h <MYSQL-SERVER-IPADDRESS> -uroot -pExpenseApp@1 < /app/schema/backend.sql
